--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,8 @@
 @import "banner";
 @import "purchase";
 @import "mobilephone";
+@import "parts";
+@import "hardware";
 
 body{
     font-size: 14px;
