--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -18,3 +18,44 @@ a{text-decoration: none;}
 ul,h4{padding: 0;margin: 0;}
 .wrapper{width: 1230px;margin: 0 auto;}
 .wrapper1240{width: 1240px;margin: 0 auto;}
+
+.listnav{
+    position: fixed;
+    z-index: 999;
+    right: 0;
+    bottom: 80px;
+    width: 42px;
+    height: 129px;
+    a{
+        display: block;
+        width: 42px;
+        height: 42px;
+        margin-top: 1px;
+        background: url(../images/kf.jpg);
+        transition: background-position 1s;
+    }
+    .listnav-1{
+        a{
+            background-position: 0 -798px;
+        }
+        a:hover{
+            background-position: 0 -860px;
+        }
+    }
+    .listnav-2{
+        a{
+            background-position: 0 -426px;
+        }
+        a:hover{
+            background-position: 0 -488px;
+        }
+    }
+    .listnav-3{
+        a{
+            background-position: 0 -674px;
+        }
+        a:hover{
+            background-position: 0 -736px;
+        }
+    }
+}
