--- a/src/css/login.css
+++ b/src/css/login.css
@@ -314,24 +314,17 @@ ul, h4 {
   width: 340px;
   text-align: center;
 }
-.m-right .reg-contents #checkinput {
-  width: 221px;
-  height: 27px;
+.m-right .reg-contents p .registor-now {
+  margin-right: 22px;
 }
-.m-right .reg-contents #checkinput span {
-  cursor: pointer;
-  margin-right: 6px;
+.m-right .reg-contents p .forget-pass {
+  color: #999;
 }
-.m-right .reg-contents #checkinput a {
-  color: #ccc;
+.m-right .reg-contents p .forget-pass:hover {
+  color: black;
 }
-.m-right .reg-contents #check {
-  display: inline-block;
-  width: 13px;
-  height: 13px;
+.m-right .reg-contents img {
   vertical-align: middle;
-  margin-right: 5px;
-  margin-top: -2px;
 }
 .m-right .reg-contents #sub {
   width: 340px;
@@ -342,5 +335,24 @@ ul, h4 {
   border: none;
   cursor: pointer;
 }
+.m-right .reg-contents .threeimg {
+  width: 293px;
+  margin-left: 30px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.m-right .reg-contents .threeimg li {
+  display: inline-block;
+  padding-right: 5px;
+  padding-left: 5px;
+  margin-right: 13px;
+}
+.m-right .reg-contents .threeimg img {
+  vertical-align: middle;
+  border: 0;
+  width: 36px;
+  height: 36px;
+}
 
-/*# sourceMappingURL=registor.css.map */
+/*# sourceMappingURL=login.css.map */
