--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -163,25 +163,18 @@ ul,h4{padding: 0;margin: 0;}
         p{
             width: 340px;
             text-align: center;
-        }
-        #checkinput{
-            width: 221px;
-            height: 27px;
-            span{
-                cursor: pointer;
-                margin-right: 6px;
+            .registor-now{
+                margin-right: 22px;
             }
-            a{
-                color: #ccc;
+            .forget-pass{
+                color: #999;
+            }
+            .forget-pass:hover{
+                color: black;
             }
         }
-        #check{
-            display: inline-block;
-            width: 13px;
-            height: 13px;
+        img{
             vertical-align: middle;
-            margin-right: 5px;
-            margin-top: -2px;
         }
         #sub{
             width: 340px;
@@ -192,6 +185,24 @@ ul,h4{padding: 0;margin: 0;}
             border: none;
             cursor: pointer;
         }
+        .threeimg{
+            width: 293px;
+            margin-left: 30px;
+            margin-top: 15px;
+            margin-bottom: 20px;
+            text-align: center;
+            li{
+                display: inline-block;
+                padding-right: 5px;
+                padding-left: 5px;
+                margin-right: 13px;
+            }
+            img{
+                vertical-align: middle;
+                border: 0;
+                width: 36px;
+                height: 36px;
+            }
+        }
     }
 }
-
