--- a/src/css/login.css
+++ b/src/css/login.css
@@ -335,6 +335,38 @@ ul, h4 {
   border: none;
   cursor: pointer;
 }
+.m-right .reg-contents .passcode {
+  position: relative;
+}
+.m-right .reg-contents .passcode .passcode-inner {
+  position: absolute;
+  top: 11px;
+  right: -12px;
+  height: 40px;
+  display: inline-block;
+  width: 90px;
+  padding: 0;
+}
+.m-right .reg-contents .changepasscode {
+  font-size: 12px;
+  color: #767676;
+}
+.m-right .reg-contents .changepasscode strong {
+  display: block;
+  float: right;
+  font-weight: normal;
+  margin-top: -2px;
+  margin-bottom: 5px;
+  cursor: pointer;
+}
+.m-right .reg-contents .changepasscode strong:hover {
+  color: #000;
+}
+.m-right .reg-contents .changepasscode:after {
+  display: table;
+  content: "";
+  clear: both;
+}
 .m-right .reg-contents .threeimg {
   width: 293px;
   margin-left: 30px;
