--- a/src/sass/cart.scss
+++ b/src/sass/cart.scss
@@ -55,3 +55,78 @@ ul,h4{padding: 0;margin: 0;}
         }
     }
 }
+
+.cart-middle{
+    width: 100% !important;
+    padding: 120px 0;
+    margin: 0;
+    border-bottom: 10px solid #f6f6f6;
+    .cart-blank{
+        background-color: #ffffff;
+        padding: 0;
+        margin: 0 auto;
+        width: 960px;
+        &:after{
+            display: table;
+            content: "";
+            clear: both;
+        }
+        .cart-img{
+            float: left;
+            text-align: right;
+            padding-right: 40px;
+            width: 400px;
+            box-sizing: border-box;
+        }
+        .cart-text{
+            width: 240px;
+            float: left;
+            box-sizing: border-box;
+            h3{
+                margin-top: 20px;
+                font-size: 22px;
+                margin-bottom: 10px;
+                font-weight: normal;
+            }
+            p{
+                font-size: 16px;
+                margin-bottom: 15px;
+                font-weight: 200;
+                margin: 0 0 10px;
+            }
+        }
+        .cart-btn{
+            float: left;
+            width: 319px;
+            position: relative;
+            min-height: 1px;
+            padding-right: 15px;
+            padding-left: 15px;
+            box-sizing: border-box;
+            margin-top: 30px;
+            p{
+                margin-bottom: 15px;
+                font-size: 21px;
+                font-weight: 200;
+                margin: 0 0 10px;
+                box-sizing: border-box;
+            }
+            .rightbtn{
+                display: inline-block;
+                    background-color: #fc6822;
+                    border: none;
+                    padding: 0;
+                    height: 36px;
+                    line-height: 36px;
+                    width: 110px;
+                    border-radius: 2px;
+                    font-size: 14px;
+                    text-align: center;
+                    white-space: nowrap;
+                    vertical-align: middle;
+                    cursor: pointer;
+                    color: #fff;
+            }
+        }
+    }
+}
