--- a/src/sass/details.scss
+++ b/src/sass/details.scss
@@ -2,7 +2,7 @@
 @import "header";
 @import "footer";
 
-
+//公共样式
 body{
     font-size: 14px;
     color: #333;
@@ -55,7 +55,7 @@ ul,h4,ol{padding: 0;margin: 0;}
         }
     }
 }
-
+//产品介绍
 .m-content{
     background: #F5F5F5;
     .explain{
@@ -76,10 +76,18 @@ ul,h4,ol{padding: 0;margin: 0;}
             color: #ccc;
             content: "/\00a0";
         }
+        li:nth-of-type(1){
+            &:before{
+                padding: 0;
+                color: #fff;
+                content: "";
+            }
+        }
     }
 }
-
+//主要内容区域
 .main-content{
+    //左侧盒子
     .m-d-left{
         width: 550px;
         margin-top: 15px;
@@ -161,7 +169,7 @@ ul,h4,ol{padding: 0;margin: 0;}
             }
         }
     }
-    
+    //右侧盒子
     .m-d-right{
         width: 50%;
         float: left;
@@ -199,13 +207,161 @@ ul,h4,ol{padding: 0;margin: 0;}
             label{
                 text-align: justify;
                 width: 75px;
-                float: left;
+                font-weight: bold;
             }
         }
-        .dl-horizontal:after{
-            display: table;
-            content: "";
-            clear: both;
+        .option{
+            margin-bottom: 20px;
+        }
+        .opt-inner{
+            label{
+                text-align: justify;
+                width: 75px;
+                font-weight: bold;
+                margin-top: 16px;
+                margin-bottom: 5px;
+                display: inline-block;
+            }
+        }
+        .fl{
+            display: inline-block;
+            margin-left: 20px;
+        }
+        .list-inline{
+            margin-left: -14px;
+            margin-bottom: 10px;
+            li{
+                display: inline-block;
+                border-color: #fc6628;
+                color: #fc6628;
+                background-color: #ffffff;
+                min-width: 50px;
+                max-height: 50px;
+                margin-bottom: 0;
+                margin-right: 9px;
+                position: relative;
+                border: 1px #e9e9e9 solid;
+            }
+            li.current{
+                border-color: #fc6628;
+            }
+            span{
+                line-height: 28px;
+                display: block;
+                padding: 10px 20px;
+                color: #fc6628;
+                box-sizing: border-box;
+            }
+            img{
+                width: 28px;
+                position: relative;
+                max-width: 28px;
+                max-height: 28px;
+                left: 0;
+                vertical-align: top;
+                border: 0;
+            }
+        }
+        .purchase-details{
+            .join-cart{
+                display: inline-block;
+                text-align: center;
+                white-space: nowrap;
+                vertical-align: middle;
+                cursor: pointer;
+                width: 125px;
+                height: 50px;
+                line-height: 50px;
+                padding: 0;
+                margin-right: 15px;
+                position: relative;
+                background-color: #ffeded;
+                border: 1px solid #fc6628;
+                color: #fc6628;
+                border-radius: 0px;
+                font-size: 16px;
+            }
+            .join-cart:hover{
+                background-color: #ec4f0f;
+                color: #fff;
+            }
+            .buy-now{
+                height: 50px;
+                line-height: 50px;
+                padding: 0;
+                display: inline-block;
+                text-align: center;
+                white-space: nowrap;
+                vertical-align: middle;
+                cursor: pointer;
+                margin-right: 15px;
+                overflow: hidden;
+                position: relative;
+                width: 125px;
+                background-color: #fc6628;
+                border: 1px solid #fc6628;
+                color: #fff;
+                font-size: 16px;
+                border-radius: 0px;
+            }
+            .buy-now:hover{
+                background-color: #b0220e;
+                color: #fff;
+            }
+            .QR-code-buy{
+                position: relative;
+                display: inline-block;
+                width: 90px;
+                height: 25px;
+                line-height: 25px;
+                padding: 0;
+                border: none;
+                color: #767676;
+                text-decoration: none;
+                &:hover{
+                    color: #000;
+                    .image-block{
+                        display: block;
+                    }
+                }
+                img{
+                    width: 20px;
+                    vertical-align: middle;
+                    border: 0;
+                }
+                .image-block{
+                    position: absolute;
+                    display: none;
+                    top: -105px;
+                    left: -5px;
+                    width: 100px;
+                    height: 100px;
+                    img{
+                        width: 100px;
+                        height: 100px;
+                    }
+                }
+            }
+            .like{
+                display: inline-block;
+                width: 125px;
+                height: 50px;
+                line-height: 50px;
+                padding: 0;
+                border: none;
+                font-size: 18px;
+                border-radius: 3px;
+                color: #767676;
+                margin-left: 10px;
+                img{
+                    vertical-align: middle;
+                    border: 0;
+                    line-height: 50px;
+                }
+            }
+            .like:hover{
+                color: #000;
+            }
         }
     }
     .m-d-right:after{
@@ -214,6 +370,7 @@ ul,h4,ol{padding: 0;margin: 0;}
         clear: both;
     }
 }
+//主要内容区域清除高度塌陷
 .main-content:after{
     display: table;
     content: "";
