--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -185,6 +185,38 @@ ul,h4{padding: 0;margin: 0;}
             border: none;
             cursor: pointer;
         }
+        .passcode{
+            position: relative;
+            .passcode-inner{
+                position: absolute;
+                top: 11px;
+                right: -12px;
+                height: 40px;
+                display: inline-block;
+                width: 90px;
+                padding: 0;
+            }
+        }
+        .changepasscode{
+            font-size: 12px;
+            color: #767676;
+            strong{
+                display: block;
+                float: right;
+                font-weight: normal;
+                margin-top: -2px;
+                margin-bottom: 5px;
+                cursor: pointer;
+            }
+            strong:hover{
+                color: #000;
+            }
+            &:after{
+                display: table;
+                content: "";
+                clear: both;
+            }
+        }
         .threeimg{
             width: 293px;
             margin-left: 30px;
