进一步完善了五个静态页面首页加了一个楼梯

--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -9,6 +9,7 @@
 
 .header-top {
   height: 40px;
+  width: 100%;
   background: #f8f8f8;
   line-height: 40px;
 }
@@ -40,28 +41,31 @@
 }
 
 .header-bot {
-  height: 35px;
-  margin: 25px 0;
-  line-height: 35px;
+  width: 100%;
+  position: relative;
 }
 .header-bot .logo {
   float: left;
   width: 250px;
   height: 35px;
+  margin-top: 25px;
 }
 .header-bot .nav {
-  height: 35px;
   width: 660px;
   padding-left: 65px;
   float: left;
 }
-.header-bot .nav :before {
+.header-bot .nav:before {
   display: table;
   content: "";
+  clear: both;
 }
 .header-bot .nav li {
   float: left;
   margin: 0 15px;
+  height: 35px;
+  padding: 25px 0;
+  line-height: 35px;
 }
 .header-bot .nav a {
   color: #333;
@@ -73,10 +77,12 @@
   float: right;
   width: 216px;
   height: 35px;
+  margin-top: 25px;
 }
-.header-bot .search :before {
+.header-bot .search:before {
   display: table;
   content: "";
+  clear: both;
 }
 .header-bot .search .search-input {
   display: inline-block;
@@ -115,6 +121,77 @@
   display: inline-block;
   margin-top: 5px;
   margin-left: 10px;
+}
+
+.axonbox, .bladebox {
+  position: absolute;
+  left: 0;
+  top: 85px;
+  z-index: 20;
+  width: 100%;
+  min-height: 228px;
+  background-color: #ffffff;
+  display: none;
+  height: 228px;
+  padding-top: 0px;
+  margin-top: 0px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+  box-sizing: border-box;
+  color: #333;
+}
+.axonbox .list-daonav li, .bladebox .list-daonav li {
+  float: left;
+  width: 205px;
+  height: 228px;
+  margin: 0;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.axonbox .list-daonav li a, .bladebox .list-daonav li a {
+  display: block;
+  color: #333;
+}
+.axonbox .list-daonav li .goods-img, .bladebox .list-daonav li .goods-img {
+  width: 204px;
+  height: 140px;
+  line-height: 140px;
+  text-align: center;
+  box-sizing: border-box;
+  border-left: 1px solid #ccc;
+}
+.axonbox .list-daonav li .goods-img > img, .bladebox .list-daonav li .goods-img > img {
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: middle;
+  display: block;
+  border: 0;
+  box-sizing: border-box;
+  margin-left: 35px;
+}
+.axonbox .list-daonav li .goods-content, .bladebox .list-daonav li .goods-content {
+  margin-top: 10px;
+  padding-bottom: 8px;
+  transition: all 0.45s;
+}
+.axonbox .list-daonav li .goods-title, .bladebox .list-daonav li .goods-title {
+  text-align: center;
+  height: 20px;
+  line-height: 20px;
+  padding: 0 10px;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 12px;
+  color: #666;
+}
+.axonbox .list-daonav li .goods-price, .bladebox .list-daonav li .goods-price {
+  text-align: center;
+  height: 20px;
+  line-height: 20px;
+  color: #fc6628;
+  font-size: 12px;
 }
 
 .footer {
