--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,6 +9,7 @@
 
 .header-top {
   height: 40px;
+  width: 100%;
   background: #f8f8f8;
   line-height: 40px;
 }
@@ -40,28 +41,31 @@
 }
 
 .header-bot {
-  height: 35px;
-  margin: 25px 0;
-  line-height: 35px;
+  width: 100%;
+  position: relative;
 }
 .header-bot .logo {
   float: left;
   width: 250px;
   height: 35px;
+  margin-top: 25px;
 }
 .header-bot .nav {
-  height: 35px;
   width: 660px;
   padding-left: 65px;
   float: left;
 }
-.header-bot .nav :before {
+.header-bot .nav:before {
   display: table;
   content: "";
+  clear: both;
 }
 .header-bot .nav li {
   float: left;
   margin: 0 15px;
+  height: 35px;
+  padding: 25px 0;
+  line-height: 35px;
 }
 .header-bot .nav a {
   color: #333;
@@ -73,10 +77,12 @@
   float: right;
   width: 216px;
   height: 35px;
+  margin-top: 25px;
 }
-.header-bot .search :before {
+.header-bot .search:before {
   display: table;
   content: "";
+  clear: both;
 }
 .header-bot .search .search-input {
   display: inline-block;
@@ -115,6 +121,77 @@
   display: inline-block;
   margin-top: 5px;
   margin-left: 10px;
+}
+
+.axonbox, .bladebox {
+  position: absolute;
+  left: 0;
+  top: 85px;
+  z-index: 20;
+  width: 100%;
+  min-height: 228px;
+  background-color: #ffffff;
+  display: none;
+  height: 228px;
+  padding-top: 0px;
+  margin-top: 0px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+  box-sizing: border-box;
+  color: #333;
+}
+.axonbox .list-daonav li, .bladebox .list-daonav li {
+  float: left;
+  width: 205px;
+  height: 228px;
+  margin: 0;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.axonbox .list-daonav li a, .bladebox .list-daonav li a {
+  display: block;
+  color: #333;
+}
+.axonbox .list-daonav li .goods-img, .bladebox .list-daonav li .goods-img {
+  width: 204px;
+  height: 140px;
+  line-height: 140px;
+  text-align: center;
+  box-sizing: border-box;
+  border-left: 1px solid #ccc;
+}
+.axonbox .list-daonav li .goods-img > img, .bladebox .list-daonav li .goods-img > img {
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: middle;
+  display: block;
+  border: 0;
+  box-sizing: border-box;
+  margin-left: 35px;
+}
+.axonbox .list-daonav li .goods-content, .bladebox .list-daonav li .goods-content {
+  margin-top: 10px;
+  padding-bottom: 8px;
+  transition: all 0.45s;
+}
+.axonbox .list-daonav li .goods-title, .bladebox .list-daonav li .goods-title {
+  text-align: center;
+  height: 20px;
+  line-height: 20px;
+  padding: 0 10px;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 12px;
+  color: #666;
+}
+.axonbox .list-daonav li .goods-price, .bladebox .list-daonav li .goods-price {
+  text-align: center;
+  height: 20px;
+  line-height: 20px;
+  color: #fc6628;
+  font-size: 12px;
 }
 
 .footer {
@@ -292,7 +369,7 @@
   height: 480px;
   background-color: rgba(248, 247, 247, 0.8);
 }
-.menu li:hover {
+.menu > li:hover {
   background: #fff;
 }
 .menu h4 {
@@ -315,6 +392,54 @@
 .menu ul a {
   color: #999999;
   font-size: 12px;
+}
+.menu .more-goods-block {
+  position: absolute;
+  background-color: #fff;
+  top: 0;
+  left: 250px;
+  display: none;
+}
+.menu .more-goods-block .goods-block {
+  display: inline-block;
+  float: left;
+  height: 480px;
+  width: 320px;
+  box-sizing: border-box;
+}
+.menu .more-goods-block .list-unstyled {
+  width: 320px;
+  padding: 3px 15px;
+  box-sizing: border-box;
+}
+.menu .more-goods-block .list-unstyled li {
+  padding: 15px 0;
+  width: 46%;
+  float: left;
+  box-sizing: border-box;
+}
+.menu .more-goods-block .list-unstyled img {
+  width: 50px;
+  height: 50px;
+  vertical-align: middle;
+  border: 0;
+}
+.menu .more-goods-block .list-unstyled .goods-image {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  display: inline-block;
+  float: left;
+  text-align: center;
+  box-sizing: border-box;
+}
+.menu .more-goods-block .list-unstyled .goods-name {
+  display: inline-block;
+  line-height: 50px;
+  margin-left: 8px;
+  overflow: hidden;
+  float: left;
+  box-sizing: border-box;
 }
 
 .menu > li {
@@ -707,6 +832,12 @@ ul, h4 {
   margin: 0 auto;
 }
 
+.clearfix {
+  display: table;
+  content: "";
+  clear: both;
+}
+
 .listnav {
   position: fixed;
   z-index: 999;
@@ -740,6 +871,57 @@ ul, h4 {
 }
 .listnav .listnav-3 a:hover {
   background-position: 0 -736px;
+}
+
+#loutinav {
+  width: 35px;
+  position: fixed;
+  z-index: 15;
+  top: 200px;
+  left: 15px;
+  border: 1px solid #ddd;
+  display: none;
+}
+
+#loutinav ul li {
+  width: 35px;
+  height: 32px;
+  border-bottom: 1px dotted #DDDDDD;
+  list-style: none;
+  font-size: 12px;
+  text-align: center;
+  position: relative;
+  cursor: pointer;
+  padding: 10px 0;
+  background: #999;
+  color: #fff;
+}
+
+#loutinav ul li span {
+  width: 35px;
+  height: 32px;
+  padding: 10px 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#loutinav ul li.last {
+  background: #666;
+  color: #fff;
+  border-bottom: 1px solid #ddd;
+}
+
+#loutinav ul li.active span {
+  background: #c00;
+  color: #fff;
+  display: block;
+}
+
+#loutinav ul li:hover span {
+  background: #c00;
+  color: #fff;
+  display: block;
 }
 
 /*# sourceMappingURL=index.css.map */
