--- a/src/sass/_banner.scss
+++ b/src/sass/_banner.scss
@@ -39,7 +39,7 @@
     width: 250px;
     height: 480px;
     background-color: rgba(248, 247, 247, 0.8);
-    li:hover{
+    &>li:hover{
         background: #fff;
     }
     h4{
@@ -61,6 +61,54 @@
         a{
             color: #999999;
             font-size: 12px;
+        }
+    }
+    .more-goods-block{
+        position: absolute;
+        background-color: #fff;
+        top: 0;
+        left: 250px;
+        display: none;//隐藏
+        .goods-block{
+            display: inline-block;
+            float: left;
+            height: 480px;
+            width: 320px;
+            box-sizing: border-box;
+        }
+        .list-unstyled{
+            width: 320px;
+            padding: 3px 15px;
+            box-sizing: border-box;
+            li{
+                padding: 15px 0;
+                width: 46%;
+                float: left;
+                box-sizing: border-box;
+            }
+            img{
+                width: 50px;
+                height: 50px;
+                vertical-align: middle;
+                border: 0;
+            }
+            .goods-image{
+                width: 50px;
+                height: 50px;
+                line-height: 50px;
+                display: inline-block;
+                float: left;
+                text-align: center;
+                box-sizing: border-box;
+            }
+            .goods-name{
+                display: inline-block;
+                line-height: 50px;
+                margin-left: 8px;
+                overflow: hidden;
+                float: left;
+                box-sizing: border-box;
+            }
         }
     }
 }
