首页写了一些效果

--- a/src/sass/_parts.scss
+++ b/src/sass/_parts.scss
@@ -35,7 +35,7 @@
                 border-bottom: 3px solid transparent;
                 box-sizing: border-box;
             }
-            .active{
+            .partsactive{
                 border-bottom-color: orange;
                 a{
                     color: orange;
