--- a/src/css/index.css
+++ b/src/css/index.css
@@ -335,22 +335,26 @@
 }
 .banner .pic {
   height: 480px;
+  width: 100%;
+  position: relative;
 }
 .banner .pic li {
   height: 480px;
+  width: 1920px;
+  position: absolute;
+  top: 0;
 }
 .banner img {
   display: block;
   border: 0;
-  max-width: 100%;
-  height: 480px;
 }
 .banner .btn {
   position: absolute;
   right: 200px;
   bottom: 20px;
 }
-.banner .btn li {
+.banner .btn span {
+  display: block;
   width: 10px;
   height: 10px;
   border-radius: 50%;
@@ -358,6 +362,7 @@
   background: none;
   border: 1px solid #fff;
   margin-left: 5px;
+  cursor: pointer;
 }
 
 .menu {
@@ -445,6 +450,10 @@
 .menu > li {
   padding: 11.5px 20px 10px 22px;
   position: relative;
+}
+
+.menu-1:hover .more-goods-block {
+  display: block;
 }
 
 .purchase-title {
@@ -636,10 +645,10 @@
   border-bottom: 3px solid transparent;
   box-sizing: border-box;
 }
-.parts-title .parts-right .pictab .active {
+.parts-title .parts-right .pictab .partsactive {
   border-bottom-color: orange;
 }
-.parts-title .parts-right .pictab .active a {
+.parts-title .parts-right .pictab .partsactive a {
   color: orange;
 }
 .parts-title .parts-right .pictab a {
@@ -912,7 +921,7 @@ ul, h4 {
   border-bottom: 1px solid #ddd;
 }
 
-#loutinav ul li.active span {
+#loutinav ul li.loutiactive span {
   background: #c00;
   color: #fff;
   display: block;
