--- a/src/sass/_banner.scss
+++ b/src/sass/_banner.scss
@@ -5,21 +5,26 @@
     overflow: hidden;
     .pic{
         height: 480px;
+        width: 100%;
+        position: relative;
         li{
             height: 480px;
+            width: 1920px;
+            position: absolute;
+            top: 0;
+            //left: -280px;
         }
     }
     img{
         display: block;
         border: 0;
-        max-width: 100%;
-        height: 480px;
     }
     .btn{
         position: absolute;
         right: 200px;
         bottom: 20px;
-        li{
+        span{
+            display: block;
             width: 10px;
             height: 10px;
             border-radius: 50%;
@@ -27,6 +32,7 @@
             background: none;
             border: 1px solid #fff;
             margin-left: 5px;
+            cursor: pointer;
         }
     }
 }
@@ -68,7 +74,7 @@
         background-color: #fff;
         top: 0;
         left: 250px;
-        display: none;//隐藏
+        display: none;
         .goods-block{
             display: inline-block;
             float: left;
@@ -115,4 +121,9 @@
 .menu>li{
     padding: 11.5px 20px 10px 22px;
     position: relative;
+}
+
+
+.menu-1:hover .more-goods-block{
+    display: block;
 }
