--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -101,7 +101,7 @@ ul,h4{padding: 0;margin: 0;}
     border-bottom: 1px solid #ddd;
 }
 
-#loutinav ul li.active span {
+#loutinav ul li.loutiactive span {
     background: #c00;
     color: #fff;
     display: block;
