--- a/src/sass/registor.scss
+++ b/src/sass/registor.scss
@@ -140,7 +140,7 @@ ul,h4{padding: 0;margin: 0;}
         color: #333;
         div{
             width: 332px;
-            height: 40px;
+            height: 50px;
             padding: 0;
             position: relative;
             margin-bottom: 12px;
@@ -164,7 +164,7 @@ ul,h4{padding: 0;margin: 0;}
             width: 340px;
             text-align: center;
         }
-        #checkinput{
+        #checkinputcheck{
             width: 221px;
             height: 27px;
             span{
@@ -175,7 +175,7 @@ ul,h4{padding: 0;margin: 0;}
                 color: #ccc;
             }
         }
-        #check{
+        #checkfuwu{
             display: inline-block;
             width: 13px;
             height: 13px;
@@ -191,6 +191,9 @@ ul,h4{padding: 0;margin: 0;}
             color: #fff;
             border: none;
             cursor: pointer;
+        }
+        .error{
+            color:red;
         }
     }
 }
