--- a/src/css/login.css
+++ b/src/css/login.css
@@ -275,6 +275,13 @@ ul, h4 {
   width: 332px;
   box-shadow: none;
 }
+.m-right #errordata {
+  display: block;
+  color: green;
+  margin-left: 5px;
+  margin-top: -10px;
+  text-align: left;
+}
 .m-right .reg-title {
   background-color: transparent;
   border-bottom: none;
@@ -326,7 +333,7 @@ ul, h4 {
 .m-right .reg-contents img {
   vertical-align: middle;
 }
-.m-right .reg-contents #sub {
+.m-right .reg-contents #btnsub {
   width: 340px;
   height: 40px;
   border-radius: 2px;
@@ -334,38 +341,6 @@ ul, h4 {
   color: #fff;
   border: none;
   cursor: pointer;
-}
-.m-right .reg-contents .passcode {
-  position: relative;
-}
-.m-right .reg-contents .passcode .passcode-inner {
-  position: absolute;
-  top: 11px;
-  right: -12px;
-  height: 40px;
-  display: inline-block;
-  width: 90px;
-  padding: 0;
-}
-.m-right .reg-contents .changepasscode {
-  font-size: 12px;
-  color: #767676;
-}
-.m-right .reg-contents .changepasscode strong {
-  display: block;
-  float: right;
-  font-weight: normal;
-  margin-top: -2px;
-  margin-bottom: 5px;
-  cursor: pointer;
-}
-.m-right .reg-contents .changepasscode strong:hover {
-  color: #000;
-}
-.m-right .reg-contents .changepasscode:after {
-  display: table;
-  content: "";
-  clear: both;
 }
 .m-right .reg-contents .threeimg {
   width: 293px;
