--- a/src/css/registor.css
+++ b/src/css/registor.css
@@ -290,7 +290,7 @@ ul, h4 {
 }
 .m-right .reg-contents div {
   width: 332px;
-  height: 40px;
+  height: 50px;
   padding: 0;
   position: relative;
   margin-bottom: 12px;
@@ -314,18 +314,18 @@ ul, h4 {
   width: 340px;
   text-align: center;
 }
-.m-right .reg-contents #checkinput {
+.m-right .reg-contents #checkinputcheck {
   width: 221px;
   height: 27px;
 }
-.m-right .reg-contents #checkinput span {
+.m-right .reg-contents #checkinputcheck span {
   cursor: pointer;
   margin-right: 6px;
 }
-.m-right .reg-contents #checkinput a {
+.m-right .reg-contents #checkinputcheck a {
   color: #ccc;
 }
-.m-right .reg-contents #check {
+.m-right .reg-contents #checkfuwu {
   display: inline-block;
   width: 13px;
   height: 13px;
@@ -341,6 +341,9 @@ ul, h4 {
   color: #fff;
   border: none;
   cursor: pointer;
+}
+.m-right .reg-contents .error {
+  color: red;
 }
 
 /*# sourceMappingURL=registor.css.map */
