--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -126,6 +126,13 @@ ul,h4{padding: 0;margin: 0;}
     border: none;
     width: 332px;
     box-shadow: none;
+    #errordata{
+        display: block;
+        color: green;
+        margin-left: 5px;
+        margin-top: -10px;
+        text-align: left;
+    }
     .reg-title{
             background-color: transparent;
             border-bottom: none;
@@ -176,7 +183,7 @@ ul,h4{padding: 0;margin: 0;}
         img{
             vertical-align: middle;
         }
-        #sub{
+        #btnsub{
             width: 340px;
             height: 40px;
             border-radius: 2px;
@@ -184,38 +191,6 @@ ul,h4{padding: 0;margin: 0;}
             color: #fff;
             border: none;
             cursor: pointer;
-        }
-        .passcode{
-            position: relative;
-            .passcode-inner{
-                position: absolute;
-                top: 11px;
-                right: -12px;
-                height: 40px;
-                display: inline-block;
-                width: 90px;
-                padding: 0;
-            }
-        }
-        .changepasscode{
-            font-size: 12px;
-            color: #767676;
-            strong{
-                display: block;
-                float: right;
-                font-weight: normal;
-                margin-top: -2px;
-                margin-bottom: 5px;
-                cursor: pointer;
-            }
-            strong:hover{
-                color: #000;
-            }
-            &:after{
-                display: table;
-                content: "";
-                clear: both;
-            }
         }
         .threeimg{
             width: 293px;
