--- a/src/css/login.css
+++ b/src/css/login.css
@@ -267,6 +267,7 @@ ul, h4 {
 
 .m-right {
   display: inline-block;
+  position: relative;
   margin-left: 80px;
   float: left;
   margin-top: 40px;
@@ -275,13 +276,6 @@ ul, h4 {
   width: 332px;
   box-shadow: none;
 }
-.m-right #errordata {
-  display: block;
-  color: green;
-  margin-left: 5px;
-  margin-top: -10px;
-  text-align: left;
-}
 .m-right .reg-title {
   background-color: transparent;
   border-bottom: none;
@@ -289,6 +283,12 @@ ul, h4 {
   font-size: 24px;
   margin-bottom: 20px;
   padding: 0 15px;
+}
+.m-right #errordata {
+  display: block;
+  position: absolute;
+  left: 10px;
+  top: 36px;
 }
 .m-right .reg-contents {
   font-size: 14px;
@@ -300,7 +300,7 @@ ul, h4 {
   height: 40px;
   padding: 0;
   position: relative;
-  margin-bottom: 12px;
+  margin-bottom: 16px;
   padding: 3px;
   box-sizing: border-box;
 }
